# researchtide

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AlertBanner.tsx  BreadcrumbNav.tsx  DetailPanel.tsx  EthicsLagBar.tsx  HudOverlay.tsx  PaperListPanel.tsx  SearchOverlay.tsx  StatCard.tsx  TabBar.tsx  TopicNodeOverlay.tsx  TopicPill.tsx
dashboard/src/hooks/: useAnimation.ts  useDashboardData.ts  useDrillDown.ts  useHealth.ts  useHorizonAlerts.ts  useKeywordData.ts  usePaperRanking.ts  usePapers.ts  useScrambleText.tsx  useSearch.ts  useTimelineData.ts  useViewTransform.ts
dashboard/src/styles/: tokens.css
dashboard/src/types/: hub.ts
dashboard/src/utils/: topicClassification.ts
dashboard/src/views/: GlobeView.tsx  KeywordsView.tsx  PapersView.tsx  TimelineView.tsx  TopicGraphView.tsx  WorldMapView.tsx  canvas.ts  continents.ts  keywordCanvas.ts
data/: influence_graph.html
docs/: UI_SPEC.md  good-first-issues.md  whitepaper_ja.md
docs/assets/: ResearchTide_WhitePaper_v02_JA.docx
notebooks/: 01_arxiv_exploration.ipynb
scripts/: refresh_data.py
src/researchtide/: __init__.py
src/researchtide/analysis/: citation_velocity.py  cross_field.py  ethics_lag.py  forecasting.py  hub_generator.py  keyword_trends.py  topics.py
src/researchtide/api/: __init__.py  demo.py  live_dashboard.py  main.py  schemas.py
tests/: test_citation_velocity.py  test_models.py
(+8 files in other folders)
